examples/pos/flow_result_answer.effekt

effect done(): Nothing

def main() = {
  try {
    do done()
  } with done {
    ()
  }
}

