examples/neg/scoped.effekt
def main() = {
  effect Exc { def raise(): Unit }
  def foo() = do raise()

  foo()
}
